--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             800: "#0F081D",
           },
           purple: {
+            800: "#2E1D41",
             700: "#270B27",
           },
           blue: {
@@ -49,6 +50,9 @@
           },
           pink: {
             900: "#E547B6"
+          },
+          green: {
+            900: "#01AEA5"
           }
         }
       }
@@ -82,23 +86,39 @@
   <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
 </header>
 <main>
-  <section class="relative px-20 text-white">
-    <img src="img/grape-no-text.png" alt="logo">
-    <h1 class="text-6xl mt-6">
-      <span class="font-semibold block">GRAPE,</span>
-      NFT Colection
-    </h1>
-    <h2 class="uppercase tracking-wider w-5/12 text-white/60 mt-2">
-      A private members only collective of 1,000 dedicated NFT collectors and artist.
-    </h2>
-    <button
-      class="mt-10 flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-20 h-14 text-base font-bold tracking-wider">
-      Get Start
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </button>
+  <section class="relative max-w-[1264px] mx-auto text-white mt-24">
+    <div
+      class="bg-gradient-to-b from-purple-800 to-transparent blur-[50px] absolute right-8 top-4 z-0 w-[400px] h-[400px] rounded-full"></div>
+    <nav class="flex items-start flex-col gap-6 absolute right-0">
+      <a class="uppercase tracking-wider text-white/60" href="#">Cards</a>
+      <a
+        class="relative uppercase tracking-wider text-white after:bg-green-900 after:w-4 after:inline-block after:h-0.5 before:bg-green-900 before:w-4 before:inline-block before:h-0.5 before:rounded-sm after:rounded-sm before:absolute before:top-1/2 before:-left-8 after:absolute after:top-1/2 after:-right-8"
+        href="#">
+        Collavorations
+      </a>
+      <a class="uppercase tracking-wider text-white/60" href="#">Collective</a>
+      <a class="uppercase tracking-wider text-white/60" href="#">Contact us</a>
+      <a class="uppercase tracking-wider text-white/60" href="#">Member access</a>
+    </nav>
+    <div class="pt-40 pb-24 px-8">
+      <img src="img/grape-no-text.png" alt="logo">
+      <h1 class="text-6xl mt-6">
+        <span class="font-semibold block">GRAPE,</span>
+        NFT Colection
+      </h1>
+      <h2 class="uppercase tracking-wider w-5/12 text-white/60 mt-2">
+        A private members only collective of 1,000 dedicated NFT collectors and artist.
+      </h2>
+      <button
+        class="mt-10 flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-20 h-14 text-base font-bold tracking-wider">
+        Get Start
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round"/>
+          <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </button>
+    </div>
   </section>
 </main>
 </body>
