--- a/index.html
+++ b/index.html
@@ -67,59 +67,169 @@
   <!--  </style>-->
 </head>
 
-<body class="bg-black-900 p-2">
-<header class="relative h-32 px-28 bg-black-800 flex items-center justify-between overflow-hidden">
-  <div class="bg-purple-700 blur-[50px] absolute left-28 -top-28 z-0 w-[200px] h-[200px]"></div>
-  <div class="flex items-center gap-16 z-10">
-    <a href="#">
-      <img class="h-14" src="img/logo.png" alt="logo">
-    </a>
-    <nav class="text-white/60 flex items-center gap-16">
-      <a class="uppercase text-base tracking-wide" href="#">Product</a>
-      <a class="uppercase text-base tracking-wide" href="#">Explore</a>
-      <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
-      <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
-    </nav>
-  </div>
-  <button class="uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
-  </button>
-  <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
-</header>
-<main>
-  <section class="relative max-w-[1264px] mx-auto text-white mt-24">
-    <div
-      class="bg-gradient-to-b from-purple-800 to-transparent blur-[50px] absolute right-8 top-4 z-0 w-[400px] h-[400px] rounded-full"></div>
-    <nav class="flex items-start flex-col gap-6 absolute right-0">
-      <a class="uppercase tracking-wider text-white/60" href="#">Cards</a>
-      <a
-        class="relative uppercase tracking-wider text-white after:bg-green-900 after:w-4 after:inline-block after:h-0.5 before:bg-green-900 before:w-4 before:inline-block before:h-0.5 before:rounded-sm after:rounded-sm before:absolute before:top-1/2 before:-left-8 after:absolute after:top-1/2 after:-right-8"
-        href="#">
-        Collavorations
+<body class="bg-black-900 text-white">
+<div class="p-2">
+  <header class="relative h-32 px-28 bg-black-800 flex items-center justify-between overflow-hidden">
+    <div class="bg-purple-700 blur-[50px] absolute left-28 -top-28 z-0 w-[200px] h-[200px]"></div>
+    <div class="flex items-center gap-16 z-10">
+      <a href="#">
+        <img class="h-14" src="img/logo.png" alt="logo">
       </a>
-      <a class="uppercase tracking-wider text-white/60" href="#">Collective</a>
-      <a class="uppercase tracking-wider text-white/60" href="#">Contact us</a>
-      <a class="uppercase tracking-wider text-white/60" href="#">Member access</a>
-    </nav>
-    <div class="pt-40 pb-24 px-8">
-      <img src="img/grape-no-text.png" alt="logo">
-      <h1 class="text-6xl mt-6">
-        <span class="font-semibold block">GRAPE,</span>
-        NFT Colection
-      </h1>
-      <h2 class="uppercase tracking-wider w-5/12 text-white/60 mt-2">
-        A private members only collective of 1,000 dedicated NFT collectors and artist.
-      </h2>
+      <nav class="text-white/60 flex items-center gap-16">
+        <a class="uppercase text-base tracking-wide" href="#">Product</a>
+        <a class="uppercase text-base tracking-wide" href="#">Explore</a>
+        <a class="uppercase text-base tracking-wide" href="#">Save & Share</a>
+        <a class="uppercase text-base tracking-wide" href="#">AI Analysis</a>
+      </nav>
+    </div>
+    <button class="uppercase bg-white/10 px-8 text-white h-10 z-10 text-sm font-bold tracking-wider">Get Member Access
+    </button>
+    <div class="bg-purple-700 blur-[50px] absolute right-28 -bottom-28 z-0 w-[200px] h-[200px]"></div>
+  </header>
+</div>
+<main>
+  <div class="relative">
+    <section class="relative max-w-[1264px] mx-auto mt-24 p-2 pb-0">
+      <div
+        class="bg-gradient-to-b from-purple-800 to-transparent blur-[50px] absolute right-8 top-4 z-0 w-[400px] h-[400px] rounded-full"></div>
+      <nav class="flex items-start flex-col gap-6 absolute right-0">
+        <a class="uppercase tracking-wider text-white/60" href="#">Cards</a>
+        <a
+          class="relative uppercase tracking-wider text-white after:bg-green-900 after:w-4 after:inline-block after:h-0.5 before:bg-green-900 before:w-4 before:inline-block before:h-0.5 before:rounded-sm after:rounded-sm before:absolute before:top-1/2 before:-left-8 after:absolute after:top-1/2 after:-right-8"
+          href="#">
+          Collavorations
+        </a>
+        <a class="uppercase tracking-wider text-white/60" href="#">Collective</a>
+        <a class="uppercase tracking-wider text-white/60" href="#">Contact us</a>
+        <a class="uppercase tracking-wider text-white/60" href="#">Member access</a>
+      </nav>
+      <div class="pt-40 px-8">
+        <img src="img/grape-no-text.png" alt="logo">
+        <h1 class="text-6xl mt-6">
+          <span class="font-semibold block">GRAPE,</span>
+          NFT Colection
+        </h1>
+        <h2 class="uppercase tracking-wider w-5/12 text-white/60 mt-2">
+          A private members only collective of 1,000 dedicated NFT collectors and artist.
+        </h2>
+      </div>
+    </section>
+    <div class="mt-10 border-y border-solid border-white/10 w-full">
+      <div class="max-w-[1264px] mx-auto px-10">
+        <button
+          class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-20 h-14 text-base font-bold tracking-wider">
+          Get Start
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <div class="border-y border-solid border-white/10 w-full">
+      <div class="max-w-[1264px] mx-auto px-10">
+        <button
+          class="flex flex-col items-center gap-2 uppercase border-x border-solid border-white/10 p-[70px] text-sm tracking-wider text-white/80">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16 7.5L12 11L8 7.5" stroke="white" stroke-opacity="0.8" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M8 15.5H16" stroke="white" stroke-opacity="0.8" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+          Scroll down
+        </button>
+      </div>
+    </div>
+  </div>
+  <section class="mt-64">
+    <div class="border-t border-solid border-white/10 w-full">
+      <div class="mx-auto max-w-6xl flex items-center gap-20">
+        <img class="min-w-[368px] w-[368px] h-[400px]" src="img/placeholder.png" alt="placeholder">
+        <div>
+          <h3 class="text-4xl">
+            <span class="font-bold">GRAPE</span>
+            NFT Collection
+          </h3>
+          <h4 class="text-2xl mt-2">Collective NFT</h4>
+          <p class="text-white/60 mt-12">
+            To join, one must hold the <span class="text-white">CARDS 404 Collective NFT</span>. Membership includes
+            access to our private Discord, early
+            access to the CARDS 404 podcast, in- person events, and other collaborations created exclusively for CARDS
+            404
+            Collective members.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="border-y border-solid border-white/10 w-full flex justify-center">
       <button
-        class="mt-10 flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-20 h-14 text-base font-bold tracking-wider">
-        Get Start
+        class="text-white flex items-center gap-4 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round"/>
-          <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+          <g clip-path="url(#clip0_58_43)">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M24 12.0001C24 18.6272 18.627 24.0001 12 24.0001C5.37295 24.0001 0 18.6272 0 12.0001C0 5.37307 5.37295 0.00012207 12 0.00012207C18.6284 0.00012207 24 5.37307 24 12.0001ZM5.92031 12.4033L5.97208 12.3219L9.09376 7.43846C9.13938 7.36696 9.24664 7.37435 9.28115 7.45202C9.80267 8.62079 10.2527 10.0744 10.0419 10.9793C9.95185 11.3517 9.70528 11.8559 9.42786 12.3219C9.39213 12.3898 9.35267 12.4563 9.31074 12.5204C9.29102 12.55 9.25773 12.5673 9.22197 12.5673H6.01154C5.92523 12.5673 5.87469 12.4736 5.92031 12.4033ZM19.8347 14.0837V13.3107C19.8347 13.2392 19.7656 13.1874 19.6978 13.2072L16.0473 14.2625C16.0275 14.2674 16.0102 14.2785 15.9967 14.2933C15.6057 14.7252 15.2734 15.0151 15.1854 15.0918L15.1793 15.0972C14.9524 15.2895 14.6713 15.3943 14.3754 15.3943H13.0538V14.0468H14.1042C14.1313 14.0468 14.1572 14.0369 14.177 14.0196L14.3126 13.8951C14.3705 13.8421 14.4396 13.778 14.5221 13.6954C14.5292 13.6883 14.5363 13.6813 14.5435 13.6741C14.5869 13.6308 14.6333 13.5846 14.6787 13.5339C14.733 13.4809 14.786 13.4217 14.8353 13.3637C14.9179 13.275 14.9968 13.1825 15.0794 13.0851C15.1386 13.021 15.1928 12.9483 15.2459 12.8755C15.305 12.8065 15.363 12.7288 15.4172 12.6548C15.4374 12.6252 15.4589 12.5952 15.4809 12.5645C15.5018 12.5353 15.5232 12.5055 15.5442 12.4748C15.5837 12.4156 15.6231 12.3528 15.6564 12.2936C15.76 12.1333 15.8475 11.9619 15.9215 11.7906C15.9554 11.7172 15.9826 11.6399 16.009 11.5648C16.0123 11.5553 16.0156 11.5459 16.0189 11.5366C16.0485 11.449 16.0731 11.3665 16.0916 11.2789C16.136 11.073 16.1459 10.8684 16.1261 10.6637C16.1212 10.5996 16.1163 10.5367 16.1015 10.4775V10.4677C16.0965 10.4258 16.0867 10.3789 16.0731 10.3358C16.0287 10.136 15.9597 9.9363 15.8722 9.74027C15.8426 9.66752 15.8081 9.59356 15.7748 9.52576C15.6959 9.37904 15.6133 9.23231 15.5196 9.09054C15.5008 9.06059 15.48 9.03026 15.4593 8.99997C15.4433 8.97664 15.4273 8.95334 15.4123 8.93027C15.353 8.83875 15.2863 8.75052 15.2215 8.6649C15.2069 8.64556 15.1924 8.62634 15.178 8.60725C15.1398 8.55707 15.098 8.5069 15.0559 8.4564C15.0328 8.42871 15.0097 8.40093 14.987 8.37299C14.9228 8.29532 14.86 8.22136 14.7959 8.14861C14.5665 7.8897 14.3261 7.65546 14.1116 7.45573C14.0721 7.41628 14.029 7.37682 13.9846 7.33861C13.8182 7.18696 13.6665 7.05503 13.5395 6.95272C13.5014 6.92336 13.4672 6.89444 13.4353 6.86753C13.4136 6.84922 13.3931 6.83183 13.3731 6.81587C13.3346 6.78718 13.3012 6.76174 13.2732 6.74039C13.2554 6.72684 13.2398 6.71494 13.2264 6.70489C13.2165 6.6975 13.2054 6.69258 13.1943 6.68886L13.0538 6.64943V5.48557C13.0538 5.29571 12.9773 5.12557 12.8553 5.00104C12.7332 4.87652 12.5631 4.80008 12.3757 4.80008C12.0009 4.80008 11.6976 5.10707 11.6976 5.48557V6.26968L11.6273 6.24997L11.4362 6.19571L11.2624 6.14764C11.2619 6.14764 11.2614 6.14742 11.2608 6.14717C11.2599 6.14682 11.2589 6.14639 11.2575 6.14639H11.2538L9.93457 5.78886C9.87663 5.77283 9.82731 5.83571 9.85691 5.88872L10.0677 6.27832C10.0797 6.30826 10.0949 6.3382 10.1104 6.36896C10.1205 6.38888 10.1308 6.40914 10.1405 6.42997C10.175 6.499 10.2095 6.57174 10.2428 6.64448C10.2724 6.70859 10.302 6.77147 10.3365 6.84052C10.351 6.87297 10.3658 6.90582 10.3808 6.93914C10.4359 7.0615 10.4939 7.19017 10.551 7.32875C10.6003 7.44587 10.6496 7.56299 10.6928 7.68505C10.8112 7.99204 10.9233 8.31997 11.0208 8.65657C11.045 8.7319 11.0644 8.80479 11.084 8.87867C11.0923 8.90999 11.1007 8.94148 11.1095 8.97342L11.1231 9.03258C11.1625 9.18918 11.1971 9.34451 11.2217 9.50108C11.2414 9.60834 11.2599 9.71068 11.2698 9.81424C11.2846 9.93136 11.2994 10.0485 11.3043 10.1656C11.3142 10.2729 11.3191 10.3851 11.3191 10.4923C11.3191 10.766 11.2945 11.0299 11.2365 11.2789C11.2329 11.2923 11.2292 11.3059 11.2256 11.3195C11.2093 11.3801 11.1925 11.4429 11.1724 11.5033C11.1542 11.568 11.1306 11.6326 11.1061 11.6997C11.0974 11.7235 11.0886 11.7476 11.0799 11.7721C11.0783 11.7764 11.0767 11.7808 11.075 11.7852C11.0569 11.834 11.0385 11.8837 11.0158 11.9324C10.8938 12.2258 10.7421 12.518 10.5855 12.7917C10.3562 13.1973 10.1257 13.5536 9.96416 13.7829C9.95429 13.7978 9.94465 13.8118 9.93536 13.8254C9.9238 13.8423 9.91278 13.8584 9.90253 13.8741C9.85199 13.9456 9.90375 14.0468 9.99128 14.0468H11.6976V15.3943H9.97155C9.50799 15.3943 9.07895 15.1317 8.87183 14.7113C8.76457 14.5005 8.72264 14.2687 8.74731 14.0418C8.75346 13.974 8.70291 13.9099 8.63389 13.9099H5.14727C5.08808 13.9099 5.04001 13.958 5.04001 14.0172V14.0887C5.04001 16.3128 6.83634 18.1153 9.05305 18.1153H15.3075C16.4799 18.1153 17.1456 17.0469 17.7999 15.9968C17.9823 15.7041 18.1639 15.4128 18.3552 15.1465C18.6992 14.6681 19.5265 14.2884 19.7681 14.1848C19.8075 14.1676 19.8347 14.1281 19.8347 14.0837Z"
+                  fill="white"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_58_43">
+              <rect width="24" height="24" fill="white"/>
+            </clipPath>
+          </defs>
         </svg>
+        View On Opensea
       </button>
     </div>
   </section>
+  <section class="mt-64 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] grid grid-cols-3 gap-8">
+      <div class="flex items-center">
+        <h3 class="text-white/50 text-[32px] uppercase leading-normal">
+          Get your <span class="text-white">Grape <br/> account</span> set up in <br/>
+          <span class="text-white">5 easy steps.</span>
+        </h3>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+          <span
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">1</span>
+        </div>
+        <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">Get hold of Grape</h4>
+        <p class="text-center mt-2 text-sm text-white/60">Obtain Poolz Finance’s token, POOLX, necessary for
+          participating in IDOs.</p>
+        <button
+          class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          Buy Grape
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+          <span
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">2</span>
+        </div>
+        <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">Lock your Grape</h4>
+        <p class="text-center mt-2 text-sm text-white/60">Ensure your participation in our IDO process by locking your
+          POOLX tokens.</p>
+        <button
+          class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          Lock Grape
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </section>
+  <div class="mb-40"></div>
 </main>
 </body>
 
