--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <style>
     html {
-      font-family: "Barlow" !important;
+      font-family: "Barlow", serif !important;
     }
   </style>
 
@@ -35,24 +35,26 @@
   <script>
     tailwind.config = {
       theme: {
-        colors: {
-          white: "#fff",
-          black: {
-            900: "#06020C",
-            800: "#0F081D",
-          },
-          purple: {
-            800: "#2E1D41",
-            700: "#270B27",
-          },
-          blue: {
-            900: "#4A4BA6",
-          },
-          pink: {
-            900: "#E547B6"
-          },
-          green: {
-            900: "#01AEA5"
+        extend: {
+          colors: {
+            white: "#fff",
+            black: {
+              900: "#06020C",
+              800: "#0F081D",
+            },
+            purple: {
+              800: "#2E1D41",
+              700: "#270B27",
+            },
+            blue: {
+              900: "#4A4BA6",
+            },
+            pink: {
+              900: "#E547B6"
+            },
+            green: {
+              900: "#01AEA5"
+            }
           }
         }
       }
@@ -192,7 +194,8 @@
       <div class="flex flex-col items-center">
         <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
           <span
-            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">1</span>
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
+            1</span>
         </div>
         <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">Get hold of Grape</h4>
         <p class="text-center mt-2 text-sm text-white/60">Obtain Poolz Finance’s token, POOLX, necessary for
@@ -219,6 +222,69 @@
         <button
           class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
           Lock Grape
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </section>
+  <section class="mt-14 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] grid grid-cols-3 gap-8">
+      <div class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+          <span
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
+            4</span>
+        </div>
+        <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">Complete KYC</h4>
+        <p class="text-center mt-2 text-sm text-white/60">Complete a simple KYC process to ensure your eligibility for
+          IDO participation.</p>
+        <button
+          class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          Get Started
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+          <span
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">4</span>
+        </div>
+        <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">Apply for Whitelist</h4>
+        <p class="text-center mt-2 text-sm text-white/60">Apply for the whitelist to gain early access & priority
+          participation in upcoming IDOs.</p>
+        <button
+          class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          Join Whitelist
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+      <div class="flex flex-col items-center">
+        <div class="w-14 h-14 bg-white/10 flex items-center justify-center">
+          <span
+            class="bg-gradient-to-br from-blue-900 to-pink-900 text-transparent bg-clip-text inline-block font-semibold text-xl">
+            5</span>
+        </div>
+        <h4 class="uppercase font-semibold text-2xl mt-6 leading-10">You’re ready to start!</h4>
+        <p class="text-center mt-2 text-sm text-white/60">Once you’ve completed these steps, explore & participate in
+          the exciting world of IDOs.</p>
+        <button
+          class="mt-8 flex items-center gap-2 bg-transparent uppercase px-20 h-14 text-base font-bold tracking-wider text-green-900">
+          How to participate
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
                   stroke-linejoin="round"/>
