--- a/index.html
+++ b/index.html
@@ -295,6 +295,16 @@
       </div>
     </div>
   </section>
+  <section class="mt-80 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] grid grid-cols-2 gap-8 py-12">
+      <div class="flex items-center">
+        <h4 class="tracking-[5.76px] uppercase text-2xl">Collaborations</h4>
+      </div>
+      <p class="text-white/60 text-sm tracking-wide">
+        Past and upcoming project collaborations available exclusively to the CARDS 404 Collective passholders community. More revealed in time.
+      </p>
+    </div>
+  </section>
   <div class="mb-40"></div>
 </main>
 </body>
