--- a/index.html
+++ b/index.html
@@ -332,6 +332,32 @@
       </div>
     </div>
   </section>
+  <section class="mt-12 border-y border-solid border-white/10 w-full">
+    <div class="flex items-center">
+      <div class="p-12">
+        <h5 class="text-sm font-medium uppercase tracking-wider text-white/60">Artist Collaboration</h5>
+        <h3 class="text-2xl font-medium uppercase mt-2">
+          Emotes by Heart You
+        </h3>
+        <p class="text-white/60 mt-6 text-base">
+          20 artists. 20 unique pieces of art. Artist names revealed only after the mint. Grails is an exclusive mint
+          only available to CARDS 404 Collective passholders. Each piece is a unique work of art made for the Grails
+          drop in collaboration with some of the top artists in the space
+        </p>
+        <button
+          class="mt-6 flex items-center gap-2 bg-transparent uppercase text-base tracking-wider text-green-900">
+          Learn More
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+            <path d="M15.5 16L15.5 8" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"/>
+          </svg>
+        </button>
+      </div>
+      <img class="w-full h-[356px] object-cover" src="img/placeholder.png" alt="placeholder">
+    </div>
+  </section>
   <section class="mt-32 border-y border-solid border-white/10 w-full">
     <div class="mx-auto max-w-[1200px] flex justify-between py-16">
       <div class="flex items-center gap-6">
