--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             },
             green: {
               900: "#01AEA5"
+            },
+            grey: {
+              900: "#d9d9d9"
             }
           }
         }
@@ -356,6 +359,70 @@
         </button>
       </div>
       <img class="w-full h-[356px] object-cover" src="img/placeholder.png" alt="placeholder">
+    </div>
+  </section>
+  <section class="mt-64 mx-auto max-w-[1200px]">
+    <h3 class="text-center uppercase text-5xl">
+      C<span class="text-white/50">O</span>lle<span class="text-white/50">C</span>tive
+      I<span class="text-white/50">N</span>telli<span class="text-white/50">G</span>ence
+    </h3>
+    <p class="text-center text-white/60 text-sm tracking-wider mt-4 mx-auto max-w-xl">
+      Past and upcoming project collaborations available exclusively to the CARDS 404 Collective passholders community.
+      More revealed in time.
+    </p>
+    <div class="grid grid-cols-2 bg-grey-900/5 mt-14">
+      <div class="p-10">
+        <div class="text-5xl font-semibold text-green-900 text-center">10,960</div>
+        <div class="mt-2 text-center text-lg text-white/60 tracking-[0.72px]">Membership NTFs</div>
+      </div>
+      <div class="p-10">
+        <div class="text-5xl font-semibold text-green-900 text-center">153,940</div>
+        <div class="mt-2 text-center text-lg text-white/60 tracking-[0.72px]">Member Owned NFTs</div>
+      </div>
+    </div>
+    <div class="grid grid-cols-2 gap-8 mt-8">
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">148</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">CryptoPunks</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">817</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">Bored Apes</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">499</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">Meebits</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">5,288</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">Art Blocks</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">326</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">SuperRare 1:1 NFTs</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
+      <div class="flex border border-solid border-white/5 h-[232px]">
+        <div class="flex justify-center flex-col px-10 py-16 w-2/5">
+          <div class="text-5xl font-semibold leading-none">273</div>
+          <div class="text-white/60 text-lg tracking-[0.72px] font-medium mt-2">Metaverse</div>
+        </div>
+        <img class="w-3/5 h-full object-cover" src="img/placeholder.png" alt="placeholder">
+      </div>
     </div>
   </section>
   <section class="mt-32 border-y border-solid border-white/10 w-full">
