--- a/launchpad.html
+++ b/launchpad.html
@@ -134,7 +134,8 @@
         <span class="font-semibold">GRAPE,</span>
         Launch
       </h1>
-      <p class="mt-2 uppercase text-lg text-white/60 tracking-[0.72px] text-center">A private members only collective of 1,000 dedicated NFT collectors and artist.</p>
+      <p class="mt-2 uppercase text-lg text-white/60 tracking-[0.72px] text-center">A private members only collective of
+        1,000 dedicated NFT collectors and artist.</p>
       <button
         class="mt-10 flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-[64px] h-14 text-base font-bold tracking-wider">
         Apply For Launchpad
@@ -144,6 +145,82 @@
           <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </button>
+    </div>
+  </section>
+  <section class="mt-52 mx-auto max-w-[1200px]">
+    <h2 class="text-5xl text-center">
+      <span class="block">F<span class="text-white/60">ea</span>tured</span>
+      La<span class="text-white/60">un</span>ch
+    </h2>
+    <div class="flex items-center border border-solid border-white/10 h-[600px] mt-16 mb-80">
+      <div class="flex flex-col p-8 w-full">
+        <div class="flex items-center gap-4 text-2xl font-medium">
+          <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+          Pixelmon
+        </div>
+        <div class="flex items-center gap-4 mt-8">
+          <a href="#">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M19.4004 7.83826L21 5.41653L18.7194 5.75804C18.7194 5.75804 16.9631 3.39956 14.3867 4.1828C12.3006 4.81718 11.461 7.27783 11.6546 8.79858C8.74346 8.40842 6.04541 7.05988 3.98757 4.96507C2.91243 11.3643 5.01405 14.47 8.16746 16.2379C6.65157 17.2829 4.84086 17.8151 3 17.7567C4.63751 19.7309 7.98649 20.0705 9.8293 19.9537C16.2568 19.548 19.8305 14.4963 19.4257 8.06983L19.4004 7.83826Z"
+                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </a>
+          <a href="#">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M3.8418 12.6394L8.64155 13.1852L16.1306 19.5914C16.6843 20.146 17.632 19.8726 17.8061 19.1088L20.9761 5.23204C21.1405 4.513 20.4264 3.90683 19.7433 4.18705L3.59856 10.7936C2.68297 11.1682 2.86006 12.5149 3.8418 12.6394Z"
+                stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M12.0704 16.34L10.1867 17.9483C9.77318 18.3015 9.13198 18.0807 9.02398 17.5475L8.64062 13.1875"
+                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M8.64258 13.1853L20.6784 4.33594" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"/>
+            </svg>
+          </a>
+          <a href="#">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M12 3C16.9709 3 21 7.02908 21 12C21 16.9709 16.9709 21 12 21C7.02908 21 3 16.9709 3 12C3 7.02908 7.02908 3 12 3Z"
+                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M11.9994 3C13.85 3 15.3493 7.02908 15.3493 12C15.3493 16.9709 13.85 21 11.9994 21C10.1488 21 8.64941 16.9709 8.64941 12C8.64941 7.02908 10.1488 3 11.9994 3Z"
+                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M21 11.9984C21 13.849 16.9709 15.3483 12 15.3483C7.02908 15.3483 3 13.849 3 11.9984C3 10.1478 7.02908 8.64844 12 8.64844C16.9709 8.64844 21 10.1478 21 11.9984Z"
+                    stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </a>
+        </div>
+        <div class="flex items-center gap-2 mt-8">
+          <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">DeFi</div>
+          <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">NFT</div>
+          <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">Shibarium</div>
+        </div>
+        <div class="text-4xl font-medium mt-12 leading-normal">
+          Next-Gen DeFi Infrastructure on Shibarium
+        </div>
+        <div class="mt-12">
+          <div class="text-lg font-medium uppercase text-white/50 tracking-8">
+            Total Raise:
+            <span class="text-green-900">$100,000</span>
+          </div>
+          <div class="text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+            Registration Ends in:
+            <span class="text-green-900">1d 7h 25m 20s</span>
+          </div>
+        </div>
+        <button
+          class="mt-12 flex justify-center items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-[64px] h-14 text-base font-bold tracking-wider">
+          Participate Now
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"></path>
+            <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                  stroke-linejoin="round"></path>
+          </svg>
+        </button>
+      </div>
+      <img class="h-full w-full object-cover" src="img/placeholder.png" alt="placeholder">
     </div>
   </section>
 </main>
