--- a/launchpad.html
+++ b/launchpad.html
@@ -148,11 +148,11 @@
     </div>
   </section>
   <section class="mt-52 mx-auto max-w-[1200px]">
-    <h2 class="text-5xl text-center">
+    <h2 class="text-5xl text-center uppercase">
       <span class="block">F<span class="text-white/60">ea</span>tured</span>
       La<span class="text-white/60">un</span>ch
     </h2>
-    <div class="flex items-center border border-solid border-white/10 h-[600px] mt-16 mb-80">
+    <div class="flex items-center border border-solid border-white/10 mt-16 mb-80">
       <div class="flex flex-col p-8 w-full">
         <div class="flex items-center gap-4 text-2xl font-medium">
           <img class="w-12 h-12" src="/img/nft.png" alt="nft">
@@ -220,9 +220,176 @@
           </svg>
         </button>
       </div>
-      <img class="h-full w-full object-cover" src="img/placeholder.png" alt="placeholder">
+      <img class="max-h-[618px] w-full object-cover" src="img/placeholder.png" alt="placeholder">
     </div>
   </section>
+  <section class="mt-52 mx-auto max-w-[1200px]">
+    <h2 class="text-5xl text-center">
+      <span class="block">L<span class="text-white/60">iv</span>e
+      A<span class="text-white/60">n</span>d
+      U<span class="text-white/60">pc</span>o<span class="text-white/60">mi</span>ng</span>
+      L<span class="text-white/60">au</span>n<span class="text-white/60">ch</span>es
+    </h2>
+    <div class="grid grid-cols-3 gap-8">
+      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+        <img class="h-full w-full object-cover max-h-[264px]" src="img/placeholder.png" alt="placeholder">
+        <div class="flex flex-col p-8 w-full">
+          <div class="flex items-center gap-4 text-2xl font-medium">
+            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+            Pixelmon
+          </div>
+          <div class="flex items-center gap-2 mt-8">
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">DeFi</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">NFT</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">Shibarium</div>
+          </div>
+          <div class="mt-8">
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+              Total Raise:
+              <span class="text-white">$100,000</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Ends in:
+              <span class="text-green-900">1d 7h 25m 20s</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Sale Type:
+              <span class="text-white">Ape Launch</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Market Maker:
+              <span class="text-white">TBA</span>
+            </div>
+          </div>
+          <button
+            class="mt-8 flex justify-center items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-[64px] h-14 text-base font-bold tracking-wider">
+            Participate Now
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+              <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+        <img class="h-full w-full object-cover max-h-[264px]" src="img/placeholder.png" alt="placeholder">
+        <div class="flex flex-col p-8 w-full">
+          <div class="flex items-center gap-4 text-2xl font-medium">
+            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+            Pixelmon
+          </div>
+          <div class="flex items-center gap-2 mt-8">
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">DeFi</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">NFT</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">Shibarium</div>
+          </div>
+          <div class="mt-8">
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+              Total Raise:
+              <span class="text-white">$100,000</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Ends in:
+              <span class="text-green-900">1d 7h 25m 20s</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Sale Type:
+              <span class="text-white">Ape Launch</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Market Maker:
+              <span class="text-white">TBA</span>
+            </div>
+          </div>
+          <button
+            class="mt-8 flex justify-center items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-[64px] h-14 text-base font-bold tracking-wider">
+            Participate Now
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+              <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <div class="flex flex-col items-center border border-solid border-white/10 mt-16 mb-80">
+        <img class="h-full w-full object-cover max-h-[264px]" src="img/placeholder.png" alt="placeholder">
+        <div class="flex flex-col p-8 w-full">
+          <div class="flex items-center gap-4 text-2xl font-medium">
+            <img class="w-12 h-12" src="/img/nft.png" alt="nft">
+            Pixelmon
+          </div>
+          <div class="flex items-center gap-2 mt-8">
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">DeFi</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">NFT</div>
+            <div class="text-green-900 text-sm font-semibold px-4 py-2 bg-white/10">Shibarium</div>
+          </div>
+          <div class="mt-8">
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8">
+              Total Raise:
+              <span class="text-white">$100,000</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Ends in:
+              <span class="text-green-900">1d 7h 25m 20s</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Sale Type:
+              <span class="text-white">Ape Launch</span>
+            </div>
+            <div class="flex items-center justify-between text-lg font-medium uppercase text-white/50 tracking-8 mt-4">
+              Market Maker:
+              <span class="text-white">TBA</span>
+            </div>
+          </div>
+          <button
+            class="mt-8 flex justify-center items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-[64px] h-14 text-base font-bold tracking-wider">
+            Participate Now
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M7.5 8L11 12L7.5 16" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+              <path d="M15.5 16L15.5 8" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round"></path>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="mt-32 border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
+      <div class="flex items-center gap-6">
+        <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M51.5001 38.5005C51.5001 39.6498 51.0435 40.752 50.2309 41.5646C49.4182 42.3773 48.316 42.8338 47.1667 42.8338H21.1667L12.5001 51.5005V16.8338C12.5001 15.6846 12.9566 14.5823 13.7693 13.7697C14.5819 12.957 15.6841 12.5005 16.8334 12.5005H47.1667C48.316 12.5005 49.4182 12.957 50.2309 13.7697C51.0435 14.5823 51.5001 15.6846 51.5001 16.8338V38.5005Z"
+            stroke="white" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
+          <path
+            d="M28.4999 54.5005C28.4999 55.6498 28.9565 56.752 29.7691 57.5646C30.5818 58.3773 31.684 58.8338 32.8333 58.8338H58.8333L67.4999 67.5005V32.8338C67.4999 31.6846 67.0434 30.5823 66.2307 29.7697C65.4181 28.957 64.3159 28.5005 63.1666 28.5005H32.8333C31.684 28.5005 30.5818 28.957 29.7691 29.7697C28.9565 30.5823 28.4999 31.6846 28.4999 32.8338V54.5005Z"
+            stroke="#01AEA5" stroke-width="4.4443" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <div class="flex flex-col gap-2">
+          <span class="text-2xl font-medium uppercase">Membership Entrance</span>
+          <span class="text-white/60">Already hold the CARDS 404 Collective NFT? Authenticate your NFT, and jump into the conversation!</span>
+        </div>
+      </div>
+      <button
+        class="flex items-center gap-2 bg-gradient-to-br from-blue-900 to-pink-900 uppercase border border-solid border-white/30 px-10 h-14 text-base font-bold tracking-wider">
+        Member Access
+      </button>
+    </div>
+  </section>
+  <footer class="border-y border-solid border-white/10 w-full">
+    <div class="mx-auto max-w-[1200px] flex justify-between py-16">
+      <div class="text-sm text-white/60">Copyright © 2024 Chainmind. All rights reserved.</div>
+      <div class="text-sm text-white/60 flex items-center gap-10">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Use</a>
+      </div>
+    </div>
+  </footer>
 </main>
 </body>
 
