--- a/launchpad.html
+++ b/launchpad.html
@@ -129,7 +129,7 @@
       </defs>
     </svg>
     <div class="flex justify-center items-center flex-col max-w-xl mx-auto">
-      <img src="img/grape-no-text.png" alt="logo">
+      <img width="100" height="100" src="img/grape-no-text.png" alt="logo">
       <h1 class="mt-6 text-6xl">
         <span class="font-semibold">GRAPE,</span>
         Launch
