--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a class="uppercase tracking-wider text-white/60" href="#">Member access</a>
       </nav>
       <div class="pt-40 px-8">
-        <img src="img/grape-no-text.png" alt="logo">
+        <img width="100" height="100" src="img/grape-no-text.png" alt="logo">
         <h1 class="text-6xl mt-6">
           <span class="font-semibold block">GRAPE,</span>
           NFT Colection
